fixed the card rendering cutting off the sidebar

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 :root {
   --logo: rgb(178, 8, 8);
+  --text: #e1dbdb;
 }
 
 * {
@@ -26,7 +27,7 @@ h1 {
 }
 
 h2 {
-  color: white;
+  color: var(--text);
   text-transform: capitalize;
   font-size: 1.5rem;
 }
@@ -59,7 +60,7 @@ li {
 li a {
   display: block;
   text-decoration: none;
-  color: white;
+  color: var(--text);
 }
 
 li a:after {
@@ -76,7 +77,7 @@ li a:hover:after {
 }
 
 form {
-  color: white;
+  color: var(--text);
 }
 
 header {
@@ -104,7 +105,7 @@ footer {
 }
 
 .link-list a {
-  color: white;
+  color: var(--text);
 }
 
 .menu {
@@ -114,19 +115,29 @@ footer {
   border-right: 1px solid var(--logo);
 }
 
+.movie {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
 .movie-area {
   min-height: 100vh;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .results {
-  width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-end;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .username {
-  color: white;
+  color: var(--text);
   font-size: 1.5rem;
   text-align: center;
   border: 1px solid var(--logo);
@@ -143,7 +154,7 @@ footer {
 }
 
 .label {
-  color: white;
+  color: var(--text);
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
 }
@@ -163,11 +174,14 @@ footer {
   border-radius: 4rem;
   text-align: center;
   background-color: var(--logo);
-  color: white;
+  color: var(--text);
   cursor: pointer;
   margin-top: 10px;
 }
 
-.poster{
+.poster {
   width: 200px;
+  height: 250px;
+  object-fit: cover;
+  margin: 20px;
 }
